--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ body {
 
 .call_container {
     width: 50%;
-    height: 100%;
+    height: 100vh;
 }
 
 .messenger_container {
@@ -61,6 +61,7 @@ body {
     background: #f4f9fd;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .logo_container {
@@ -69,7 +70,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 120px;
-    margin-top: 2rem;
+    padding-top: 2rem;
 }
 
 .description_container {
@@ -91,7 +92,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin-bottom: 2rem;
 }
 
 .personal_code_title_container {
@@ -144,7 +144,7 @@ body {
 }
 
 .personal_code_input {
-    width: 100%;
+    width: 80%;
     height: 100%;
     background: rgba(196, 196, 196, 0.2);
     background-filter: blur(80px);
@@ -167,6 +167,11 @@ body {
     border-radius: 15px;
     box-shadow: 0px 2px 2px 10px rgba(10, 145, 219, 0.2);
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px 8px;
+    cursor: pointer;
 }
 
 .stranger_connecting_container {
@@ -216,13 +221,16 @@ body {
 }
 
 .new_message_container {
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .new_message_input {
     margin: 0 40px;
     margin-bottom: 30px;
-    width: calc(100% - 80px);
+    width: calc(100% - 180px);
     height: 60px;
     color: #676f7a;
     font-size: 16px;
@@ -241,8 +249,8 @@ body {
 
 .messages_container {
     flex-grow: 1;
-    margin: 40px 30px;
     overflow-y: scroll;
+    min-height: 100vh;
 }
 
 .message_left_container {
@@ -279,7 +287,7 @@ body {
     width: 40px;
     height: 40px;
     position: absolute;
-    right: 50px;
+    right: 80px;
     top: 10px;
     box-shadow: 0px 2px 20px 5px rgba(10, 145, 219, 0.05);
     background: linear-gradient(180deg, #ff9519 0%, #ffba6a 100%);
@@ -358,6 +366,10 @@ body {
     background: rgba(0, 0, 0, 0.2);
     border-radius: 50px;
     transition: 0.3s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .call_button_large {
@@ -366,6 +378,10 @@ body {
     border-radius: 75px;
     background: #fc5d5b;
     transition: 0.3s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .dialog_wrapper {
